// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner ECL Spinner negative renders correctly 1`] = `
<jest>
  <div
    class="ecl-spinner ecl-spinner--negative ecl-spinner--medium ecl-spinner--centered ecl-spinner--visible"
  >
    <svg
      class="ecl-spinner__loader"
      viewBox="25 25 50 50"
    >
      <circle
        class="ecl-spinner__circle"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
        stroke-width="4px"
        vector-effect="non-scaling-stroke"
      />
    </svg>
    <div
      class="ecl-spinner__text"
    >
      Loading...
    </div>
  </div>
</jest>
`;

exports[`Spinner ECL Spinner primary renders correctly 1`] = `
<jest>
  <div
    class="ecl-spinner ecl-spinner--primary ecl-spinner--medium ecl-spinner--centered ecl-spinner--visible"
  >
    <svg
      class="ecl-spinner__loader"
      viewBox="25 25 50 50"
    >
      <circle
        class="ecl-spinner__circle"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
        stroke-width="4px"
        vector-effect="non-scaling-stroke"
      />
    </svg>
    <div
      class="ecl-spinner__text"
    >
      Loading...
    </div>
  </div>
</jest>
`;

exports[`Spinner ECL Spinner renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-spinner ecl-spinner--primary ecl-spinner--medium ecl-spinner--centered ecl-spinner--visible"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <svg
      class="ecl-spinner__loader"
      viewBox="25 25 50 50"
    >
      <circle
        class="ecl-spinner__circle"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
        stroke-width="4px"
        vector-effect="non-scaling-stroke"
      />
    </svg>
    <div
      class="ecl-spinner__text"
    >
      Loading...
    </div>
  </div>
</jest>
`;

exports[`Spinner ECL Spinner renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-spinner ecl-spinner--primary ecl-spinner--medium ecl-spinner--centered ecl-spinner--visible"
  >
    <svg
      class="ecl-spinner__loader"
      viewBox="25 25 50 50"
    >
      <circle
        class="ecl-spinner__circle"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
        stroke-width="4px"
        vector-effect="non-scaling-stroke"
      />
    </svg>
    <div
      class="ecl-spinner__text"
    >
      Loading...
    </div>
  </div>
</jest>
`;
